tring to fix flex-wrap

--- a/hailey_react-portfolio/src/styles/Portfolio.css
+++ b/hailey_react-portfolio/src/styles/Portfolio.css
@@ -7,9 +7,10 @@
   padding: 10px;
 }
 
-.container {
+.project-container {
   position: relative;
   width: 50%;
+
 }
 
 .image {
